complete storefront locale

--- a/apps/storefront/public/locales/mn/common.json
+++ b/apps/storefront/public/locales/mn/common.json
@@ -241,10 +241,10 @@
 	"text-quantity": "Тоо хэмжээ",
 	"text-recent-orders": "сүүлийн үеийн захиалга",
 	"text-register": "Бүртгүүлэх",
-	"text-related-products": "",
-	"text-reset-password": "",
-	"text-save": "",
-	"text-search-result": "",
+	"text-related-products": "Холбоотой бүтээгдэхүүн",
+	"text-reset-password": "Нууц үгээ анхны байдалд нь оруулж",
+	"text-save": "Хадгалах",
+	"text-search-result": "Хайлтын үр дүн",
 	"text-secs": "Сек",
 	"text-section-title": "Хэсгийн гарчиг",
 	"text-see-all-product": "Бүх бүтээгдэхүүнийг харах",
@@ -270,46 +270,46 @@
 	"text-street-address": "Гудамжны хаяг",
 	"text-sub-orders": "Дэд захиалга",
 	"text-sub-total": "Дунд нийлбэр",
-	"text-subscribe-description": "",
-	"text-subscribe-error": "",
-	"text-subscribe-heading": "",
-	"text-subscribe-now": "",
-	"text-subscribe-sending": "",
-	"text-subscribe-success": "",
-	"text-successfully-updated": "",
-	"text-summer-collection": "",
-	"text-support-thumbnail": "",
-	"text-tags": "",
-	"text-tax": "",
-	"text-tax-calculation-label": "",
-	"text-tax-checkout-calculation": "",
-	"text-tax-shipping-calculation": "",
-	"text-terms": "",
-	"text-testimonial": "",
-	"text-time-over": "",
-	"text-title": "",
-	"text-top-brands": "",
-	"text-top-products": "",
-	"text-total": "",
-	"text-total-amount": "",
-	"text-total-item": "",
-	"text-total-price": "",
-	"text-tracking-number": "",
-	"text-twitter": "",
-	"text-type": "",
-	"text-unit-price": "",
-	"text-update": "",
-	"text-update-address": "",
-	"text-verify-code": "",
-	"text-view": "",
-	"text-view-cart": "",
-	"text-view-details": "",
-	"text-visit-site": "",
-	"text-watch": "",
-	"text-website": "",
-	"text-website-colon": "",
-	"text-woman": "",
-	"text-your-order": "",
-	"text-youtube": "",
-	"text-zip": ""
+	"text-subscribe-description": "Манай мэдээллийн товхимолд бүртгүүлж, шинэчлэгдэж байгаарай.",
+	"text-subscribe-error": "Ямар нэгэн зүйл буруугаар эргэсэн!",
+	"text-subscribe-heading": "Ирсэн имэйл хайрцагтаа мэргэжилтний зөвлөгөө аваарай",
+	"text-subscribe-now": "ОДОО БҮРТГҮҮЛЭЭРЭЙ",
+	"text-subscribe-sending": "Илгээж байна...",
+	"text-subscribe-success": "Бүртгэлийн үйл явцыг дуусгахын тулд бид танд илгээсэн имэйлийн холбоос дээр дарна уу.",
+	"text-successfully-updated": "Амжилттай шинэчлэгдсэн!",
+	"text-summer-collection": "Зуны цуглуулга",
+	"text-support-thumbnail": "Өнгөц зургийг дэмжих",
+	"text-tags": "Шошго",
+	"text-tax": "Татвар",
+	"text-tax-calculation-label": "Татвар",
+	"text-tax-checkout-calculation": "Тооцоо хийх үед тооцоолсон",
+	"text-tax-shipping-calculation": "Тооцоо хийх үед тооцоолсон",
+	"text-terms": "Нөхцөл",
+	"text-testimonial": "Гэрчилгээ",
+	"text-time-over": "Цаг дууссан!",
+	"text-title": "Гарчиг",
+	"text-top-brands": "Шилдэг брэндүүд",
+	"text-top-products": "Шилдэг бүтээгдэхүүн",
+	"text-total": "нийт",
+	"text-total-amount": "Нийт дүн",
+	"text-total-item": "Нийт зүйл",
+	"text-total-price": "Нийт үнэ",
+	"text-tracking-number": "Хяналтын дугаар",
+	"text-twitter": "Twitter",
+	"text-type": "Төрөл",
+	"text-unit-price": "Нэгжийн үнэ",
+	"text-update": "Шинэчлэх",
+	"text-update-address": "Хаяг шинэчлэх",
+	"text-verify-code": "Баталгаажуулах код",
+	"text-view": "Харах",
+	"text-view-cart": "Сагс харах",
+	"text-view-details": "Дэлгэрэнгүй мэдээллийг харах",
+	"text-visit-site": "Энэ сайтад зочилно уу",
+	"text-watch": "үзэх",
+	"text-website": "Вэбсайт",
+	"text-website-colon": "Вэбсайт:",
+	"text-woman": "Эмэгтэй",
+	"text-your-order": "Таны захиалга",
+	"text-youtube": "Youtube",
+	"text-zip": "ZIP"
 }
