--- a/apps/storefront/public/locales/mn/forms.json
+++ b/apps/storefront/public/locales/mn/forms.json
@@ -9,56 +9,56 @@
 	"error-email-format": "Өгөгдсөн имэйл хаягийн формат буруу байна",
 	"error-email-required": "Та имэйл хаягаа оруулах шаардлагатай",
 	"error-min-code": "Код хамгийн багадаа 6 тэмдэгттэй байх ёстой",
-	"error-name-required": "",
-	"error-subject-required": "",
+	"error-name-required": "Нэр оруулах шаардлагатай",
+	"error-subject-required": "Та бидэнтэй ямар сэдвээр ярилцахыг хүсч байна вэ?",
 	"first-name-required": "Нэрийг оруулах шаардлагатай",
 	"label-address": "Хаяг",
 	"label-city": "Хот/Хот",
 	"label-confirm-password-star": "Нууц үгээ баталгаажуулах*",
-	"label-country": "",
-	"label-display-name": "",
-	"label-email": "",
-	"label-email-required": "",
-	"label-email-star": "",
-	"label-female": "",
-	"label-first-name": "",
-	"label-last-name": "",
-	"label-male": "",
-	"label-message": "",
-	"label-message-star": "",
-	"label-name": "",
-	"label-name-required": "",
-	"label-name-star": "",
-	"label-new-password": "",
-	"label-new-password-star": "",
-	"label-old-password": "",
-	"label-old-password-star": "",
-	"label-order-notes": "",
-	"label-password": "",
-	"label-password-star": "",
-	"label-phone": "",
-	"label-postcode": "",
-	"label-remember-me": "",
-	"label-save-information": "",
-	"label-save-review-information": "",
-	"label-state": "",
-	"label-street-address": "",
-	"label-subject": "",
-	"label-subject-star": "",
-	"label-your-rating": "",
-	"last-name-required": "",
-	"name-required": "",
-	"name-subject": "",
-	"password-new-required": "",
-	"password-old-required": "",
-	"password-required": "",
-	"phone-required": "",
-	"placeholder-email": "",
-	"placeholder-email-subscribe": "",
-	"placeholder-message": "",
-	"placeholder-name": "",
-	"placeholder-order-notes": "",
-	"placeholder-search": "",
-	"placeholder-subject": "",
-	"text-login-mobile": ""
+	"label-country": "Улс",
+	"label-display-name": "Харагдах нэр *",
+	"label-email": "И-мэйл",
+	"label-email-required": "Таны имэйл (шаардлагатай)",
+	"label-email-star": "Имэйл *",
+	"label-female": "Эмэгтэй",
+	"label-first-name": "Нэр *",
+	"label-last-name": "Овог *",
+	"label-male": "Эрэгтэй",
+	"label-message": "Мессеж",
+	"label-message-star": "Захиа *",
+	"label-name": "Нэр",
+	"label-name-required": "Таны нэр (шаардлагатай)",
+	"label-name-star": "Нэр *",
+	"label-new-password": "Шинэ нууц үг",
+	"label-new-password-star": "Шинэ нууц үг*",
+	"label-old-password": "Хуучин нууц үг",
+	"label-old-password-star": "Хуучин нууц үг*",
+	"label-order-notes": "Захиалгын тэмдэглэл (заавал биш)",
+	"label-password": "нууц үг",
+	"label-password-star": "Нууц үг*",
+	"label-phone": "Утас/гар утас",
+	"label-postcode": "Шуудангийн код",
+	"label-remember-me": "Намайг санаарай",
+	"label-save-information": "Дараагийн удаад энэ мэдээллийг хадгална уу",
+	"label-save-review-information": "Дараагийн удаа сэтгэгдэл бичихийн тулд миний нэр, имэйл, вэбсайтыг энэ хөтөч дээр хадгална уу.",
+	"label-state": "Муж",
+	"label-street-address": "Гудамжны хаяг",
+	"label-subject": "Сэдэв",
+	"label-subject-star": "Сэдэв*",
+	"label-your-rating": "Таны үнэлгээ *",
+	"last-name-required": "Овог оруулах шаардлагатай",
+	"name-required": "Нэр оруулах шаардлагатай",
+	"name-subject": "Таны сэдэв шаардлагатай",
+	"password-new-required": "Шинэ нууц үг шаардлагатай",
+	"password-old-required": "Хуучин нууц үг шаардлагатай",
+	"password-required": "нууц үг шаардлагатай",
+	"phone-required": "Утасны дугаар шаардлагатай",
+	"placeholder-email": "Имэйлээ оруулна уу",
+	"placeholder-email-subscribe": "Имэйлээ энд бичнэ үү",
+	"placeholder-message": "Энд мессежээ бичээрэй",
+	"placeholder-name": "Нэрээ оруулна уу",
+	"placeholder-order-notes": "Таны захиалгын талаархи тэмдэглэл, жишээ нь. хүргэх тусгай тэмдэглэл",
+	"placeholder-search": "Хайх...",
+	"placeholder-subject": "Сэдвээ оруулна уу",
+	"text-login-mobile": "Гар утасны дугаараар нэвтэрнэ үү"
 }
