--- a/apps/storefront/public/locales/mn/menu.json
+++ b/apps/storefront/public/locales/mn/menu.json
@@ -1,75 +1,75 @@
 {
 	"menu-404": "404",
-	"menu-admin": "",
-	"menu-backpacks": "",
-	"menu-belt-scarves": "",
-	"menu-blazers": "",
-	"menu-blazwers-coats": "",
+	"menu-admin": "админ",
+	"menu-backpacks": "Үүргэвч",
+	"menu-belt-scarves": "Бүс, ороолт ба бусад",
+	"menu-blazers": "Блэйзер",
+	"menu-blazwers-coats": "Blazwers & Coats",
 	"menu-boots": "Гутал",
 	"menu-bra": "Хөхний даруулга",
-	"menu-briefs": "",
-	"menu-casual-shirts": "",
-	"menu-casual-shoes": "",
-	"menu-casual-wear": "",
+	"menu-briefs": "Товч мэдээлэл",
+	"menu-casual-shirts": "Энгийн цамц",
+	"menu-casual-shoes": "Энгийн гутал",
+	"menu-casual-wear": "Өдөр тутмын хувцас",
 	"menu-category": "Ангилал",
-	"menu-checkout": "",
-	"menu-classic": "",
-	"menu-clothing": "",
-	"menu-collection": "",
+	"menu-checkout": "Тооцоо хийх",
+	"menu-classic": "Сонгодог",
+	"menu-clothing": "Хувцас",
+	"menu-collection": "Цуглуулга",
 	"menu-contact-us": "Холбоо барих",
-	"menu-demos": "",
-	"menu-dresses": "",
-	"menu-elegant": "",
-	"menu-faq": "",
-	"menu-fashion": "",
-	"menu-fashion-jewellers": "",
-	"menu-fine-jewellers": "",
-	"menu-flats": "",
-	"menu-footwear": "",
+	"menu-demos": "ДЕМО",
+	"menu-dresses": "Хувцаслалт",
+	"menu-elegant": "Дэгжин",
+	"menu-faq": "Түгээмэл асуултууд",
+	"menu-fashion": "Загвар",
+	"menu-fashion-jewellers": "Загварын үнэт эдлэлчид",
+	"menu-fine-jewellers": "Сайхан үнэт эдлэлчид",
+	"menu-flats": "Орон сууц",
+	"menu-footwear": "Гутал",
 	"menu-forget-password": "Нууц үг сэргээх",
-	"menu-formal-shirts": "",
-	"menu-gadgets": "",
-	"menu-handbags-wallets": "",
-	"menu-headphones": "",
-	"menu-heels": "",
-	"menu-jackets": "",
-	"menu-jewellers": "",
-	"menu-jumpsuits": "",
-	"menu-lingerie-sleepwear": "",
-	"menu-lipsticks": "",
-	"menu-makeup": "",
-	"menu-men-wear": "",
-	"menu-minimal": "",
-	"menu-modern": "",
+	"menu-formal-shirts": "Албан ёсны цамц",
+	"menu-gadgets": "Гаджетууд",
+	"menu-handbags-wallets": "Цүнх ба түрийвч",
+	"menu-headphones": "Чихэвч",
+	"menu-heels": "Өсгийтэй гутал",
+	"menu-jackets": "Хүрэм",
+	"menu-jewellers": "Үнэт эдлэлчид",
+	"menu-jumpsuits": "Комбинзон",
+	"menu-lingerie-sleepwear": "Дотуур хувцас ба унтлагын хувцас",
+	"menu-lipsticks": "Уруулын будаг",
+	"menu-makeup": "Нүүр будалт",
+	"menu-men-wear": "Эрэгтэй өмсдөг",
+	"menu-minimal": "Хамгийн бага",
+	"menu-modern": "Орчин үеийн",
 	"menu-my-account": "Хэрэглэгч",
 	"menu-order": "Захиалга",
 	"menu-pages": "Хуудаснууд",
-	"menu-plus-size": "",
-	"menu-premium-beauty": "",
-	"menu-privacy-policy": "",
-	"menu-refined": "",
+	"menu-plus-size": "Plus Size",
+	"menu-premium-beauty": "Дээд зэрэглэлийн гоо сайхан",
+	"menu-privacy-policy": "Нууцлалын бодлого",
+	"menu-refined": "Сайжруулсан",
 	"menu-search": "Хайх",
-	"menu-shops": "",
-	"menu-shorts-skirts": "",
-	"menu-shurgs": "",
+	"menu-shops": "Дэлгүүрүүд",
+	"menu-shorts-skirts": "Богино өмд ба банзал",
+	"menu-shurgs": "Шүргс",
 	"menu-sign-in": "Нэвтрэх",
 	"menu-sign-up": "Бүртгүүлэх",
-	"menu-skincare": "",
-	"menu-sleepwear": "",
-	"menu-smart-wearables": "",
-	"menu-sports-accessories": "",
-	"menu-sports-active-wear": "",
-	"menu-standard": "",
-	"menu-suits": "",
-	"menu-sunglasses-frames": "",
-	"menu-t-shirt": "",
-	"menu-terms-condition": "",
-	"menu-top-wear": "",
-	"menu-tops-shirts": "",
+	"menu-skincare": "Арьс арчилгаа",
+	"menu-sleepwear": "Унтлагын хувцас",
+	"menu-smart-wearables": "Ухаалаг зүүдэг төхөөрөмж",
+	"menu-sports-accessories": "Спортын хэрэгслүүд",
+	"menu-sports-active-wear": "Спорт ба идэвхтэй хувцас",
+	"menu-standard": "Стандарт",
+	"menu-suits": "Костюм",
+	"menu-sunglasses-frames": "Нарны шил ба жааз",
+	"menu-t-shirt": "Цамц",
+	"menu-terms-condition": "Нөхцөл ба нөхцөл",
+	"menu-top-wear": "Топ хувцас",
+	"menu-tops-shirts": "Топс, подволк, цамц",
 	"menu-trendy": "Trendy",
 	"menu-users": "Хэрэглэгчид",
-	"menu-vintage": "",
-	"menu-watches-wearables": "",
-	"menu-western-wear": "",
-	"menu-women-wear": ""
+	"menu-vintage": "Хувцасны чимэг",
+	"menu-watches-wearables": "Бугуйн цаг, зүүх хэрэгсэл",
+	"menu-western-wear": "Баруун хувцас",
+	"menu-women-wear": "Эмэгтэйчүүдийн хувцас"
 }
