--- a/apps/storefront/public/locales/mn/footer.json
+++ b/apps/storefront/public/locales/mn/footer.json
@@ -1,9 +1,9 @@
 {
-	"link-about-us": "",
-	"link-announcements": "",
-	"link-answer-center": "",
-	"link-contact-us": "",
-	"link-copyright": "",
+	"link-about-us": "Бидний тухай",
+	"link-announcements": "Зарууд",
+	"link-answer-center": "Хариултын төв",
+	"link-contact-us": "Бидэнтэй холбоо барина уу",
+	"link-copyright": "Зохиогчийн эрх",
 	"link-customer-support": "Хэрэглэгчийн дэмжлэг",
 	"link-discussion-boards": "Хэлэлцүүлгийн самбарууд",
 	"link-email": "yourexample@email.com",
@@ -12,32 +12,32 @@
 	"link-facebook": "Facebook",
 	"link-faq": "Түгээмэл асуулт, тусламж",
 	"link-giving-works": "Бүтээл өгөх",
-	"link-instagram": "",
-	"link-kids-wear": "",
-	"link-men-wear": "",
-	"link-phone": "",
-	"link-privacy": "",
-	"link-return-policy": "",
-	"link-shipping": "",
-	"link-site-map": "",
-	"link-sports-wear": "",
-	"link-support-center": "",
-	"link-terms": "",
-	"link-twitter": "",
-	"link-women-wear": "",
-	"link-youtube": "",
-	"payment-jcb": "",
-	"payment-master-card": "",
-	"payment-paypal": "",
-	"payment-skrill": "",
-	"payment-visa": "",
-	"text-all-rights-reserved": "",
-	"text-copyright": "",
-	"widget-title-about": "",
-	"widget-title-community": "",
-	"widget-title-contact": "",
-	"widget-title-customer-care": "",
-	"widget-title-our-information": "",
-	"widget-title-social": "",
-	"widget-title-top-categories": ""
+	"link-instagram": "Instagram",
+	"link-kids-wear": "Хүүхдийн хувцас",
+	"link-men-wear": "Эрэгтэй хувцас",
+	"link-phone": "Бидэн рүү залгаарай: +1 254 568-5479",
+	"link-privacy": "Нууцлалын бодлогын шинэчлэл",
+	"link-return-policy": "Буцаах бодлого",
+	"link-shipping": "Хүргэлт, Хүргэлт",
+	"link-site-map": "Сайтын газрын зураг",
+	"link-sports-wear": "Спортын хувцас",
+	"link-support-center": "Дэмжих төв",
+	"link-terms": "Үйлчилгээний нөхцөл",
+	"link-twitter": "Twitter",
+	"link-women-wear": "Эмэгтэйчүүдийн хувцас",
+	"link-youtube": "Youtube",
+	"payment-jcb": "JCB",
+	"payment-master-card": "Мастер карт",
+	"payment-paypal": "Paypal",
+	"payment-skrill": "Скрилл",
+	"payment-visa": "Виз",
+	"text-all-rights-reserved": "Бүх эрх хуулиар хамгаалагдсан",
+	"text-copyright": "Зохиогчийн эрх",
+	"widget-title-about": "Тухай",
+	"widget-title-community": "Олон нийтийн",
+	"widget-title-contact": "Холбоо барих",
+	"widget-title-customer-care": "Хэрэглэгчийн тусламж үйлчилгээ",
+	"widget-title-our-information": "Манай мэдээлэл",
+	"widget-title-social": "Нийгмийн",
+	"widget-title-top-categories": "Топ ангилал"
 }
