init admin locale

--- a/apps/dashboard/public/locales/mn/common.json
+++ b/apps/dashboard/public/locales/mn/common.json
@@ -1,202 +1,201 @@
 {
-  "text-read-more": "Цааш унших",
-  "text-less": "Less",
-  "text-or": "Or",
-  "description": "Track Order",
-  "error-heading": "Error code: 404",
-  "nav-menu-track-order": "Track Order",
-  "nav-menu-offer": "Offers",
-  "nav-menu-faq": "FAQ",
-  "nav-menu-contact": "Холбоо барих",
-  "user-avatar": "user avatar",
-  "auth-menu-profile": "Холбоо барих",
-  "auth-menu-checkout": "Checkout",
-  "auth-menu-my-orders": "Миний захиалгууд",
-  "auth-menu-logout": "Гарах",
-  "join-button": "Бүртгүүлэх",
-  "change-locale": "Switch to german",
-  "admin-login-title": "Админ эрхээр нэвтрэх",
-  "admin-register-title": "Шинээр бүртгүүлэх",
-  "billing-address": "Billing Address",
-  "shipping-address": "Shipping Address",
-  "no-order-found": "No Order Found",
-  "order-sub-total": "Sub total",
-  "order-tax": "Tax",
-  "order-delivery-fee": "Delivery fee",
-  "order-discount": "Discount",
-  "order-total": "Total",
-  "signing-out-text": "Signing out...",
-  "sale-history": "Sale History",
-  "january": "January",
-  "february": "February",
-  "march": "March",
-  "april": "April",
-  "may": "May",
-  "june": "June",
-  "july": "July",
-  "august": "August",
-  "september": "September",
-  "october": "October",
-  "november": "November",
-  "december": "December",
-  "attribute": "Attribute",
-  "attribute-values": "Attribute Values",
-  "pixel": "Pixel",
-  "text-loading": "Loading...",
-  "sidebar-nav-item-dashboard": "Удирдлагийн хэсэг",
-  "sidebar-nav-item-products": "Бүтээгдэхүүн",
-  "sidebar-nav-item-attributes": "Attributes",
-  "sidebar-nav-item-attribute-value": "Attribute Values",
-  "sidebar-nav-item-groups": "Groups",
-  "sidebar-nav-item-categories": "Categories",
-  "sidebar-nav-item-orders": "Orders",
-  "sidebar-nav-item-order-status": "Order Status",
-  "sidebar-nav-item-users": "Хэрэглэгч",
-  "sidebar-nav-item-coupons": "Купон",
-  "sidebar-nav-item-taxes": "Татвар",
-  "sidebar-nav-item-shippings": "Хүргэлт",
-  "sidebar-nav-item-settings": "Тохиргоо",
-  "sidebar-nav-item-shops": "Дэлгүүрүүд",
-  "sidebar-nav-item-my-shops": "Миний дэлгүүрүүд",
-  "sidebar-nav-item-my-shops-dashboard": "Shops Dashboard",
-  "sidebar-nav-item-tags": "Шошго",
-  "sidebar-nav-item-withdraws": "Withdraws",
-  "navbar-add-products": "Бүтээгдэхүүн нэмэх",
-  "authorized-nav-item-settings": "Тохиргоо",
-  "authorized-nav-item-profile": "Хувийн мэдээлэл",
-  "authorized-nav-item-logout": "Гарах",
-  "text-delete": "Устгах",
-  "text-edit": "Засах",
-  "text-view": "Харах",
-  "text-ban-user": "Ban User",
-  "text-activate-user": "Activate User",
-  "update-success": "Successfully updated!",
-  "name-required": "You must need to provide a name",
-  "email-required": "You must need to provide your email address",
-  "invalid-email": "Provided email address format is not valid",
-  "password-required": "You must need to provide your password",
-  "currency-required": "Please select a currency",
-  "token-required": "You must need to provide your token address",
-  "confirm-password": "Please confirm password!",
-  "password-should-match": "Passwords should match!",
-  "invalid-token": "Invalid Token!",
-  "status-required": "Status is required",
-  "type-required": "Type is required",
-  "amount-required": "Amount is required",
-  "amount-greater-than-zeo": "Amount must be greater than zero",
-  "code-required": "Code is required",
-  "serial-required": "Serial is required",
-  "color-required": "Color is required",
-  "tax-required": "Tax rate is required",
-  "tax-greater-than-zeo": "Tax must be greater than zero",
-  "tax-must-be-integer": "Tax must be integer",
-  "serial-greater-than-zeo": "Serial must be greater than zero",
-  "serial-must-be-integer": "Serial must be integer",
-  "active-from-date-required": "Active from date is required",
-  "expire-date-required": "Expire date is required",
-  "delete-item": "Delete Item",
-  "delete-item-confirm": "Are you sure, you want to delete?",
-  "button-cancel": "Cancel",
-  "button-delete": "Delete",
-  "block-customer": "Block Customer",
-  "block-customer-confirm": "Are you sure, you want to block this customer?",
-  "button-block": "Block",
-  "text-permission-message": "Your shop is not activated yet. You can't proceed further operations.",
-  "sidebar-nav-item-staffs": "Staffs",
-  "text-no-contact": "No contact number available",
-  "text-visit-shop": "Visit Shop",
-  "text-edit-shop": "Edit Shop",
-  "text-enabled": "Enabled",
-  "text-disabled": "Disabled",
-  "text-active": "Active",
-  "text-inactive": "Inactive",
-  "text-products": "Products",
-  "text-total-products": "Total Products",
-  "text-items-sold": "Items Sold",
-  "text-revenue": "Revenue",
-  "text-total-orders": "Total Orders",
-  "text-gross-sales": "Gross Sales",
-  "text-others": "Others",
-  "text-commission-rate": "Admin Commission Rate",
-  "text-current-balance": "Current Balance",
-  "text-registered-since": "Registered Since",
-  "text-payment-info": "Payment Information",
-  "text-shop-dashboard": "View Dashboard",
-  "text-no-shop": "No Shops Found",
-  "text-px": "px",
-  "text-create-shop": "Create Shop",
-  "text-add-your": "Please add your",
-  "text-pending": "Pending",
-  "text-approved": "Approved",
-  "text-on-hold": "On hold",
-  "text-rejected": "Rejected",
-  "text-processing": "Processing",
-  "text-amount": "Amount",
-  "text-payment-method": "Payment Method",
-  "text-status": "Status",
-  "text-details": "Details",
-  "text-note": "Note",
-  "text-logo": "Logo",
-  "text-name": "Name",
-  "text-email": "Email",
-  "text-bank": "Bank",
-  "text-image": "Image",
-  "text-account-no": "Account No.",
-  "text-no-address": "No Address Found",
-  "text-withdrawal-info": "Withdrawal Information",
-  "password-changed-successfully": "Successfully changed your password!",
-  "successfully-updated": "Successfully updated!",
-  "successfully-created": "Successfully created!",
-  "MARVEL_ERROR.NOT_FOUND": "Not Found",
-  "MARVEL_ERROR.NOT_AUTHORIZED": "Not Authorized",
-  "MARVEL_ERROR.INVALID_CREDENTIALS": "Invalid Credentials",
-  "MARVEL_ERROR.SOMETHING_WENT_WRONG": "Something went wrong",
-  "MARVEL_ERROR.PAYMENT_FAILED": "Payment Failed",
-  "MARVEL_ERROR.OPERATION_NOT": "Operation Not",
-  "MARVEL_ERROR.INSUFFICIENT_BALANCE": "Insufficient Balance",
-  "MARVEL_ERROR.WITHDRAW_MUST_BE_ATTACHED_TO_SHOP": "Withdraw must be attached to shop",
-  "MARVEL_ERROR.PLEASE_LOGIN_USING_FACEBOOK_OR_GOOGLE": "Please login using Facebook or Google",
-  "MARVEL_ERROR.ACTION_NOT_VALID": "Action not valid",
-  "MARVEL_ERROR.SHOP_NOT_APPROVED": "Shop not approved",
-  "MARVEL_MESSAGE.NOT_FOUND": "Not Found",
-  "MARVEL_MESSAGE.CHECK_INBOX_FOR_PASSWORD_RESET_EMAIL": "Check inbox for password reset email",
-  "MARVEL_MESSAGE.SOMETHING_WENT_WRONG": "Something went wrong",
-  "MARVEL_MESSAGE.TOKEN_IS_VALID": "Token is valid",
-  "MARVEL_MESSAGE.INVALID_TOKEN": "Token is not valid",
-  "MARVEL_MESSAGE.PASSWORD_RESET_SUCCESSFUL": "Password reset successful",
-  "MARVEL_MESSAGE.INVALID_CREDENTIALS": "Provided credentials is not valid",
-  "MARVEL_MESSAGE.EMAIL_SENT_SUCCESSFUL": "Email successfully sent",
-  "text-access-denied": "Access Denied",
-  "text-access-denied-message": "You don't have the permission to access this page.",
-  "text-return-home": "Return to home",
-  "text-upload-highlight": "Upload an image",
-  "text-upload-message": "or drag and drop",
-  "text-img-format": "PNG, JPG",
-  "text-shop-approve-button": "Submit",
-  "text-shop-approve-title": "Disapprove Shop",
-  "text-shop-approve-description": "Are you sure?",
-  "text-approve-shop": "Approve Shop",
-  "text-disapprove-shop": "Disapprove Shop",
-  "filter-by-group": "Filter By Group",
-  "filter-by-group-placeholder": "Filter by Group",
-  "filter-by-category": "Filter By Category",
-  "filter-by-category-placeholder": "Filter by Category",
-  "filter-by-order": "Order By",
-  "filter-by-order-placeholder": "Order By",
-  "text-filter": "Filter",
-  "text-download": "Download",
-  "text-map-cant-load": "Map cannot be loaded right now, sorry.",
-  "text-banner": "Banner",
-
-  "text-export-import": "Export/Import",
-  "text-export-products": "Export Products",
-  "text-export-product-variations": "Export Product Variations",
-  "text-import-products": "Import Products",
-  "text-import-product-variations": "Import Product Variations",
-  "text-import-attributes": "Import Attributes",
-  "text-export-attributes": "Export Attributes",
-  "attribute-imported-successfully": "Attributes Imported Successfully",
-  "product-imported-successfully": "Products Imported Successfully",
-  "variation-options-imported-successfully": "Variation Options Imported Successfully",
-  "MARVEL_ERROR.WRONG_CSV": "You have uploaded wrong csv file!"
+	"MARVEL_ERROR.ACTION_NOT_VALID": "",
+	"MARVEL_ERROR.INSUFFICIENT_BALANCE": "",
+	"MARVEL_ERROR.INVALID_CREDENTIALS": "",
+	"MARVEL_ERROR.NOT_AUTHORIZED": "",
+	"MARVEL_ERROR.NOT_FOUND": "",
+	"MARVEL_ERROR.OPERATION_NOT": "",
+	"MARVEL_ERROR.PAYMENT_FAILED": "",
+	"MARVEL_ERROR.PLEASE_LOGIN_USING_FACEBOOK_OR_GOOGLE": "",
+	"MARVEL_ERROR.SHOP_NOT_APPROVED": "",
+	"MARVEL_ERROR.SOMETHING_WENT_WRONG": "",
+	"MARVEL_ERROR.WITHDRAW_MUST_BE_ATTACHED_TO_SHOP": "",
+	"MARVEL_ERROR.WRONG_CSV": "",
+	"MARVEL_MESSAGE.CHECK_INBOX_FOR_PASSWORD_RESET_EMAIL": "",
+	"MARVEL_MESSAGE.EMAIL_SENT_SUCCESSFUL": "",
+	"MARVEL_MESSAGE.INVALID_CREDENTIALS": "",
+	"MARVEL_MESSAGE.INVALID_TOKEN": "",
+	"MARVEL_MESSAGE.NOT_FOUND": "",
+	"MARVEL_MESSAGE.PASSWORD_RESET_SUCCESSFUL": "",
+	"MARVEL_MESSAGE.SOMETHING_WENT_WRONG": "",
+	"MARVEL_MESSAGE.TOKEN_IS_VALID": "",
+	"active-from-date-required": "",
+	"admin-login-title": "",
+	"admin-register-title": "",
+	"amount-greater-than-zeo": "",
+	"amount-required": "",
+	"april": "",
+	"attribute": "",
+	"attribute-imported-successfully": "",
+	"attribute-values": "",
+	"august": "",
+	"auth-menu-checkout": "",
+	"auth-menu-logout": "",
+	"auth-menu-my-orders": "",
+	"auth-menu-profile": "",
+	"authorized-nav-item-logout": "",
+	"authorized-nav-item-profile": "",
+	"authorized-nav-item-settings": "",
+	"billing-address": "",
+	"block-customer": "",
+	"block-customer-confirm": "",
+	"button-block": "",
+	"button-cancel": "",
+	"button-delete": "",
+	"change-locale": "",
+	"code-required": "",
+	"color-required": "",
+	"confirm-password": "",
+	"currency-required": "",
+	"december": "",
+	"delete-item": "",
+	"delete-item-confirm": "",
+	"description": "",
+	"email-required": "",
+	"error-heading": "",
+	"expire-date-required": "",
+	"february": "",
+	"filter-by-category": "",
+	"filter-by-category-placeholder": "",
+	"filter-by-group": "",
+	"filter-by-group-placeholder": "",
+	"filter-by-order": "",
+	"filter-by-order-placeholder": "",
+	"invalid-email": "",
+	"invalid-token": "",
+	"january": "",
+	"join-button": "",
+	"july": "",
+	"june": "",
+	"march": "",
+	"may": "",
+	"name-required": "",
+	"nav-menu-contact": "",
+	"nav-menu-faq": "",
+	"nav-menu-offer": "",
+	"nav-menu-track-order": "",
+	"navbar-add-products": "",
+	"no-order-found": "",
+	"november": "",
+	"october": "",
+	"order-delivery-fee": "",
+	"order-discount": "",
+	"order-sub-total": "",
+	"order-tax": "",
+	"order-total": "",
+	"password-changed-successfully": "",
+	"password-required": "",
+	"password-should-match": "",
+	"pixel": "",
+	"product-imported-successfully": "",
+	"sale-history": "",
+	"september": "",
+	"serial-greater-than-zeo": "",
+	"serial-must-be-integer": "",
+	"serial-required": "",
+	"shipping-address": "",
+	"sidebar-nav-item-attribute-value": "",
+	"sidebar-nav-item-attributes": "",
+	"sidebar-nav-item-categories": "",
+	"sidebar-nav-item-coupons": "",
+	"sidebar-nav-item-dashboard": "",
+	"sidebar-nav-item-groups": "",
+	"sidebar-nav-item-my-shops": "",
+	"sidebar-nav-item-my-shops-dashboard": "",
+	"sidebar-nav-item-order-status": "",
+	"sidebar-nav-item-orders": "",
+	"sidebar-nav-item-products": "",
+	"sidebar-nav-item-settings": "",
+	"sidebar-nav-item-shippings": "",
+	"sidebar-nav-item-shops": "",
+	"sidebar-nav-item-staffs": "",
+	"sidebar-nav-item-tags": "",
+	"sidebar-nav-item-taxes": "",
+	"sidebar-nav-item-users": "",
+	"sidebar-nav-item-withdraws": "",
+	"signing-out-text": "",
+	"status-required": "",
+	"successfully-created": "",
+	"successfully-updated": "",
+	"tax-greater-than-zeo": "",
+	"tax-must-be-integer": "",
+	"tax-required": "",
+	"text-access-denied": "",
+	"text-access-denied-message": "",
+	"text-account-no": "",
+	"text-activate-user": "",
+	"text-active": "",
+	"text-add-your": "",
+	"text-amount": "",
+	"text-approve-shop": "",
+	"text-approved": "",
+	"text-ban-user": "",
+	"text-bank": "",
+	"text-banner": "",
+	"text-commission-rate": "",
+	"text-create-shop": "",
+	"text-current-balance": "",
+	"text-delete": "",
+	"text-details": "",
+	"text-disabled": "",
+	"text-disapprove-shop": "",
+	"text-download": "",
+	"text-edit": "",
+	"text-edit-shop": "",
+	"text-email": "",
+	"text-enabled": "",
+	"text-export-attributes": "",
+	"text-export-import": "",
+	"text-export-product-variations": "",
+	"text-export-products": "",
+	"text-filter": "",
+	"text-gross-sales": "",
+	"text-image": "",
+	"text-img-format": "",
+	"text-import-attributes": "",
+	"text-import-product-variations": "",
+	"text-import-products": "",
+	"text-inactive": "",
+	"text-items-sold": "",
+	"text-less": "",
+	"text-loading": "",
+	"text-logo": "",
+	"text-map-cant-load": "",
+	"text-name": "",
+	"text-no-address": "",
+	"text-no-contact": "",
+	"text-no-shop": "",
+	"text-note": "",
+	"text-on-hold": "",
+	"text-or": "",
+	"text-others": "",
+	"text-payment-info": "",
+	"text-payment-method": "",
+	"text-pending": "",
+	"text-permission-message": "",
+	"text-processing": "",
+	"text-products": "",
+	"text-px": "",
+	"text-read-more": "Цааш унших",
+	"text-registered-since": "",
+	"text-rejected": "",
+	"text-return-home": "",
+	"text-revenue": "",
+	"text-shop-approve-button": "",
+	"text-shop-approve-description": "",
+	"text-shop-approve-title": "",
+	"text-shop-dashboard": "",
+	"text-status": "",
+	"text-total-orders": "",
+	"text-total-products": "",
+	"text-upload-highlight": "",
+	"text-upload-message": "",
+	"text-view": "",
+	"text-visit-shop": "",
+	"text-withdrawal-info": "",
+	"token-required": "",
+	"type-required": "",
+	"update-success": "",
+	"user-avatar": "",
+	"variation-options-imported-successfully": ""
 }
