--- a/apps/dashboard/public/locales/en/common.json
+++ b/apps/dashboard/public/locales/en/common.json
@@ -1,202 +1,201 @@
 {
-  "text-read-more": "Read more",
-  "text-less": "Less",
-  "text-or": "Or",
-  "description": "Track Order",
-  "error-heading": "Error code: 404",
-  "nav-menu-track-order": "Track Order",
-  "nav-menu-offer": "Offers",
-  "nav-menu-faq": "FAQ",
-  "nav-menu-contact": "Contact",
-  "user-avatar": "user avatar",
-  "auth-menu-profile": "Contact",
-  "auth-menu-checkout": "Checkout",
-  "auth-menu-my-orders": "My Orders",
-  "auth-menu-logout": "Logout",
-  "join-button": "Join",
-  "change-locale": "Switch to german",
-  "admin-login-title": "Login to admin",
-  "admin-register-title": "Register new account",
-  "billing-address": "Billing Address",
-  "shipping-address": "Shipping Address",
-  "no-order-found": "No Order Found",
-  "order-sub-total": "Sub total",
-  "order-tax": "Tax",
-  "order-delivery-fee": "Delivery fee",
-  "order-discount": "Discount",
-  "order-total": "Total",
-  "signing-out-text": "Signing out...",
-  "sale-history": "Sale History",
-  "january": "January",
-  "february": "February",
-  "march": "March",
-  "april": "April",
-  "may": "May",
-  "june": "June",
-  "july": "July",
-  "august": "August",
-  "september": "September",
-  "october": "October",
-  "november": "November",
-  "december": "December",
-  "attribute": "Attribute",
-  "attribute-values": "Attribute Values",
-  "pixel": "Pixel",
-  "text-loading": "Loading...",
-  "sidebar-nav-item-dashboard": "Dashboard",
-  "sidebar-nav-item-products": "Products",
-  "sidebar-nav-item-attributes": "Attributes",
-  "sidebar-nav-item-attribute-value": "Attribute Values",
-  "sidebar-nav-item-groups": "Groups",
-  "sidebar-nav-item-categories": "Categories",
-  "sidebar-nav-item-orders": "Orders",
-  "sidebar-nav-item-order-status": "Order Status",
-  "sidebar-nav-item-users": "Users",
-  "sidebar-nav-item-coupons": "Coupons",
-  "sidebar-nav-item-taxes": "Taxes",
-  "sidebar-nav-item-shippings": "Shippings",
-  "sidebar-nav-item-settings": "Settings",
-  "sidebar-nav-item-shops": "Shops",
-  "sidebar-nav-item-my-shops": "My Shops",
-  "sidebar-nav-item-my-shops-dashboard": "Shops Dashboard",
-  "sidebar-nav-item-tags": "Tags",
-  "sidebar-nav-item-withdraws": "Withdraws",
-  "navbar-add-products": "Add Products",
-  "authorized-nav-item-settings": "Settings",
-  "authorized-nav-item-profile": "Profile",
-  "authorized-nav-item-logout": "Logout",
-  "text-delete": "Delete",
-  "text-edit": "Edit",
-  "text-view": "View",
-  "text-ban-user": "Ban User",
-  "text-activate-user": "Activate User",
-  "update-success": "Successfully updated!",
-  "name-required": "You must need to provide a name",
-  "email-required": "You must need to provide your email address",
-  "invalid-email": "Provided email address format is not valid",
-  "password-required": "You must need to provide your password",
-  "currency-required": "Please select a currency",
-  "token-required": "You must need to provide your token address",
-  "confirm-password": "Please confirm password!",
-  "password-should-match": "Passwords should match!",
-  "invalid-token": "Invalid Token!",
-  "status-required": "Status is required",
-  "type-required": "Type is required",
-  "amount-required": "Amount is required",
-  "amount-greater-than-zeo": "Amount must be greater than zero",
-  "code-required": "Code is required",
-  "serial-required": "Serial is required",
-  "color-required": "Color is required",
-  "tax-required": "Tax rate is required",
-  "tax-greater-than-zeo": "Tax must be greater than zero",
-  "tax-must-be-integer": "Tax must be integer",
-  "serial-greater-than-zeo": "Serial must be greater than zero",
-  "serial-must-be-integer": "Serial must be integer",
-  "active-from-date-required": "Active from date is required",
-  "expire-date-required": "Expire date is required",
-  "delete-item": "Delete Item",
-  "delete-item-confirm": "Are you sure, you want to delete?",
-  "button-cancel": "Cancel",
-  "button-delete": "Delete",
-  "block-customer": "Block Customer",
-  "block-customer-confirm": "Are you sure, you want to block this customer?",
-  "button-block": "Block",
-  "text-permission-message": "Your shop is not activated yet. You can't proceed further operations.",
-  "sidebar-nav-item-staffs": "Staffs",
-  "text-no-contact": "No contact number available",
-  "text-visit-shop": "Visit Shop",
-  "text-edit-shop": "Edit Shop",
-  "text-enabled": "Enabled",
-  "text-disabled": "Disabled",
-  "text-active": "Active",
-  "text-inactive": "Inactive",
-  "text-products": "Products",
-  "text-total-products": "Total Products",
-  "text-items-sold": "Items Sold",
-  "text-revenue": "Revenue",
-  "text-total-orders": "Total Orders",
-  "text-gross-sales": "Gross Sales",
-  "text-others": "Others",
-  "text-commission-rate": "Admin Commission Rate",
-  "text-current-balance": "Current Balance",
-  "text-registered-since": "Registered Since",
-  "text-payment-info": "Payment Information",
-  "text-shop-dashboard": "View Dashboard",
-  "text-no-shop": "No Shops Found",
-  "text-px": "px",
-  "text-create-shop": "Create Shop",
-  "text-add-your": "Please add your",
-  "text-pending": "Pending",
-  "text-approved": "Approved",
-  "text-on-hold": "On hold",
-  "text-rejected": "Rejected",
-  "text-processing": "Processing",
-  "text-amount": "Amount",
-  "text-payment-method": "Payment Method",
-  "text-status": "Status",
-  "text-details": "Details",
-  "text-note": "Note",
-  "text-logo": "Logo",
-  "text-name": "Name",
-  "text-email": "Email",
-  "text-bank": "Bank",
-  "text-image": "Image",
-  "text-account-no": "Account No.",
-  "text-no-address": "No Address Found",
-  "text-withdrawal-info": "Withdrawal Information",
-  "password-changed-successfully": "Successfully changed your password!",
-  "successfully-updated": "Successfully updated!",
-  "successfully-created": "Successfully created!",
-  "MARVEL_ERROR.NOT_FOUND": "Not Found",
-  "MARVEL_ERROR.NOT_AUTHORIZED": "Not Authorized",
-  "MARVEL_ERROR.INVALID_CREDENTIALS": "Invalid Credentials",
-  "MARVEL_ERROR.SOMETHING_WENT_WRONG": "Something went wrong",
-  "MARVEL_ERROR.PAYMENT_FAILED": "Payment Failed",
-  "MARVEL_ERROR.OPERATION_NOT": "Operation Not",
-  "MARVEL_ERROR.INSUFFICIENT_BALANCE": "Insufficient Balance",
-  "MARVEL_ERROR.WITHDRAW_MUST_BE_ATTACHED_TO_SHOP": "Withdraw must be attached to shop",
-  "MARVEL_ERROR.PLEASE_LOGIN_USING_FACEBOOK_OR_GOOGLE": "Please login using Facebook or Google",
-  "MARVEL_ERROR.ACTION_NOT_VALID": "Action not valid",
-  "MARVEL_ERROR.SHOP_NOT_APPROVED": "Shop not approved",
-  "MARVEL_MESSAGE.NOT_FOUND": "Not Found",
-  "MARVEL_MESSAGE.CHECK_INBOX_FOR_PASSWORD_RESET_EMAIL": "Check inbox for password reset email",
-  "MARVEL_MESSAGE.SOMETHING_WENT_WRONG": "Something went wrong",
-  "MARVEL_MESSAGE.TOKEN_IS_VALID": "Token is valid",
-  "MARVEL_MESSAGE.INVALID_TOKEN": "Token is not valid",
-  "MARVEL_MESSAGE.PASSWORD_RESET_SUCCESSFUL": "Password reset successful",
-  "MARVEL_MESSAGE.INVALID_CREDENTIALS": "Provided credentials is not valid",
-  "MARVEL_MESSAGE.EMAIL_SENT_SUCCESSFUL": "Email successfully sent",
-  "text-access-denied": "Access Denied",
-  "text-access-denied-message": "You don't have the permission to access this page.",
-  "text-return-home": "Return to home",
-  "text-upload-highlight": "Upload an image",
-  "text-upload-message": "or drag and drop",
-  "text-img-format": "PNG, JPG",
-  "text-shop-approve-button": "Submit",
-  "text-shop-approve-title": "Disapprove Shop",
-  "text-shop-approve-description": "Are you sure?",
-  "text-approve-shop": "Approve Shop",
-  "text-disapprove-shop": "Disapprove Shop",
-  "filter-by-group": "Filter By Group",
-  "filter-by-group-placeholder": "Filter by Group",
-  "filter-by-category": "Filter By Category",
-  "filter-by-category-placeholder": "Filter by Category",
-  "filter-by-order": "Order By",
-  "filter-by-order-placeholder": "Order By",
-  "text-filter": "Filter",
-  "text-download": "Download",
-  "text-map-cant-load": "Map cannot be loaded right now, sorry.",
-  "text-banner": "Banner",
-
-  "text-export-import": "Export/Import",
-  "text-export-products": "Export Products",
-  "text-export-product-variations": "Export Product Variations",
-  "text-import-products": "Import Products",
-  "text-import-product-variations": "Import Product Variations",
-  "text-import-attributes": "Import Attributes",
-  "text-export-attributes": "Export Attributes",
-  "attribute-imported-successfully": "Attributes Imported Successfully",
-  "product-imported-successfully": "Products Imported Successfully",
-  "variation-options-imported-successfully": "Variation Options Imported Successfully",
-  "MARVEL_ERROR.WRONG_CSV": "You have uploaded wrong csv file!"
+	"MARVEL_ERROR.ACTION_NOT_VALID": "Action not valid",
+	"MARVEL_ERROR.INSUFFICIENT_BALANCE": "Insufficient Balance",
+	"MARVEL_ERROR.INVALID_CREDENTIALS": "Invalid Credentials",
+	"MARVEL_ERROR.NOT_AUTHORIZED": "Not Authorized",
+	"MARVEL_ERROR.NOT_FOUND": "Not Found",
+	"MARVEL_ERROR.OPERATION_NOT": "Operation Not",
+	"MARVEL_ERROR.PAYMENT_FAILED": "Payment Failed",
+	"MARVEL_ERROR.PLEASE_LOGIN_USING_FACEBOOK_OR_GOOGLE": "Please login using Facebook or Google",
+	"MARVEL_ERROR.SHOP_NOT_APPROVED": "Shop not approved",
+	"MARVEL_ERROR.SOMETHING_WENT_WRONG": "Something went wrong",
+	"MARVEL_ERROR.WITHDRAW_MUST_BE_ATTACHED_TO_SHOP": "Withdraw must be attached to shop",
+	"MARVEL_ERROR.WRONG_CSV": "You have uploaded wrong csv file!",
+	"MARVEL_MESSAGE.CHECK_INBOX_FOR_PASSWORD_RESET_EMAIL": "Check inbox for password reset email",
+	"MARVEL_MESSAGE.EMAIL_SENT_SUCCESSFUL": "Email successfully sent",
+	"MARVEL_MESSAGE.INVALID_CREDENTIALS": "Provided credentials is not valid",
+	"MARVEL_MESSAGE.INVALID_TOKEN": "Token is not valid",
+	"MARVEL_MESSAGE.NOT_FOUND": "Not Found",
+	"MARVEL_MESSAGE.PASSWORD_RESET_SUCCESSFUL": "Password reset successful",
+	"MARVEL_MESSAGE.SOMETHING_WENT_WRONG": "Something went wrong",
+	"MARVEL_MESSAGE.TOKEN_IS_VALID": "Token is valid",
+	"active-from-date-required": "Active from date is required",
+	"admin-login-title": "Login to admin",
+	"admin-register-title": "Register new account",
+	"amount-greater-than-zeo": "Amount must be greater than zero",
+	"amount-required": "Amount is required",
+	"april": "April",
+	"attribute": "Attribute",
+	"attribute-imported-successfully": "Attributes Imported Successfully",
+	"attribute-values": "Attribute Values",
+	"august": "August",
+	"auth-menu-checkout": "Checkout",
+	"auth-menu-logout": "Logout",
+	"auth-menu-my-orders": "My Orders",
+	"auth-menu-profile": "Contact",
+	"authorized-nav-item-logout": "Logout",
+	"authorized-nav-item-profile": "Profile",
+	"authorized-nav-item-settings": "Settings",
+	"billing-address": "Billing Address",
+	"block-customer": "Block Customer",
+	"block-customer-confirm": "Are you sure, you want to block this customer?",
+	"button-block": "Block",
+	"button-cancel": "Cancel",
+	"button-delete": "Delete",
+	"change-locale": "Switch to german",
+	"code-required": "Code is required",
+	"color-required": "Color is required",
+	"confirm-password": "Please confirm password!",
+	"currency-required": "Please select a currency",
+	"december": "December",
+	"delete-item": "Delete Item",
+	"delete-item-confirm": "Are you sure, you want to delete?",
+	"description": "Track Order",
+	"email-required": "You must need to provide your email address",
+	"error-heading": "Error code: 404",
+	"expire-date-required": "Expire date is required",
+	"february": "February",
+	"filter-by-category": "Filter By Category",
+	"filter-by-category-placeholder": "Filter by Category",
+	"filter-by-group": "Filter By Group",
+	"filter-by-group-placeholder": "Filter by Group",
+	"filter-by-order": "Order By",
+	"filter-by-order-placeholder": "Order By",
+	"invalid-email": "Provided email address format is not valid",
+	"invalid-token": "Invalid Token!",
+	"january": "January",
+	"join-button": "Join",
+	"july": "July",
+	"june": "June",
+	"march": "March",
+	"may": "May",
+	"name-required": "You must need to provide a name",
+	"nav-menu-contact": "Contact",
+	"nav-menu-faq": "FAQ",
+	"nav-menu-offer": "Offers",
+	"nav-menu-track-order": "Track Order",
+	"navbar-add-products": "Add Products",
+	"no-order-found": "No Order Found",
+	"november": "November",
+	"october": "October",
+	"order-delivery-fee": "Delivery fee",
+	"order-discount": "Discount",
+	"order-sub-total": "Sub total",
+	"order-tax": "Tax",
+	"order-total": "Total",
+	"password-changed-successfully": "Successfully changed your password!",
+	"password-required": "You must need to provide your password",
+	"password-should-match": "Passwords should match!",
+	"pixel": "Pixel",
+	"product-imported-successfully": "Products Imported Successfully",
+	"sale-history": "Sale History",
+	"september": "September",
+	"serial-greater-than-zeo": "Serial must be greater than zero",
+	"serial-must-be-integer": "Serial must be integer",
+	"serial-required": "Serial is required",
+	"shipping-address": "Shipping Address",
+	"sidebar-nav-item-attribute-value": "Attribute Values",
+	"sidebar-nav-item-attributes": "Attributes",
+	"sidebar-nav-item-categories": "Categories",
+	"sidebar-nav-item-coupons": "Coupons",
+	"sidebar-nav-item-dashboard": "Dashboard",
+	"sidebar-nav-item-groups": "Groups",
+	"sidebar-nav-item-my-shops": "My Shops",
+	"sidebar-nav-item-my-shops-dashboard": "Shops Dashboard",
+	"sidebar-nav-item-order-status": "Order Status",
+	"sidebar-nav-item-orders": "Orders",
+	"sidebar-nav-item-products": "Products",
+	"sidebar-nav-item-settings": "Settings",
+	"sidebar-nav-item-shippings": "Shippings",
+	"sidebar-nav-item-shops": "Shops",
+	"sidebar-nav-item-staffs": "Staffs",
+	"sidebar-nav-item-tags": "Tags",
+	"sidebar-nav-item-taxes": "Taxes",
+	"sidebar-nav-item-users": "Users",
+	"sidebar-nav-item-withdraws": "Withdraws",
+	"signing-out-text": "Signing out...",
+	"status-required": "Status is required",
+	"successfully-created": "Successfully created!",
+	"successfully-updated": "Successfully updated!",
+	"tax-greater-than-zeo": "Tax must be greater than zero",
+	"tax-must-be-integer": "Tax must be integer",
+	"tax-required": "Tax rate is required",
+	"text-access-denied": "Access Denied",
+	"text-access-denied-message": "You don't have the permission to access this page.",
+	"text-account-no": "Account No.",
+	"text-activate-user": "Activate User",
+	"text-active": "Active",
+	"text-add-your": "Please add your",
+	"text-amount": "Amount",
+	"text-approve-shop": "Approve Shop",
+	"text-approved": "Approved",
+	"text-ban-user": "Ban User",
+	"text-bank": "Bank",
+	"text-banner": "Banner",
+	"text-commission-rate": "Admin Commission Rate",
+	"text-create-shop": "Create Shop",
+	"text-current-balance": "Current Balance",
+	"text-delete": "Delete",
+	"text-details": "Details",
+	"text-disabled": "Disabled",
+	"text-disapprove-shop": "Disapprove Shop",
+	"text-download": "Download",
+	"text-edit": "Edit",
+	"text-edit-shop": "Edit Shop",
+	"text-email": "Email",
+	"text-enabled": "Enabled",
+	"text-export-attributes": "Export Attributes",
+	"text-export-import": "Export/Import",
+	"text-export-product-variations": "Export Product Variations",
+	"text-export-products": "Export Products",
+	"text-filter": "Filter",
+	"text-gross-sales": "Gross Sales",
+	"text-image": "Image",
+	"text-img-format": "PNG, JPG",
+	"text-import-attributes": "Import Attributes",
+	"text-import-product-variations": "Import Product Variations",
+	"text-import-products": "Import Products",
+	"text-inactive": "Inactive",
+	"text-items-sold": "Items Sold",
+	"text-less": "Less",
+	"text-loading": "Loading...",
+	"text-logo": "Logo",
+	"text-map-cant-load": "Map cannot be loaded right now, sorry.",
+	"text-name": "Name",
+	"text-no-address": "No Address Found",
+	"text-no-contact": "No contact number available",
+	"text-no-shop": "No Shops Found",
+	"text-note": "Note",
+	"text-on-hold": "On hold",
+	"text-or": "Or",
+	"text-others": "Others",
+	"text-payment-info": "Payment Information",
+	"text-payment-method": "Payment Method",
+	"text-pending": "Pending",
+	"text-permission-message": "Your shop is not activated yet. You can't proceed further operations.",
+	"text-processing": "Processing",
+	"text-products": "Products",
+	"text-px": "px",
+	"text-read-more": "Read more",
+	"text-registered-since": "Registered Since",
+	"text-rejected": "Rejected",
+	"text-return-home": "Return to home",
+	"text-revenue": "Revenue",
+	"text-shop-approve-button": "Submit",
+	"text-shop-approve-description": "Are you sure?",
+	"text-shop-approve-title": "Disapprove Shop",
+	"text-shop-dashboard": "View Dashboard",
+	"text-status": "Status",
+	"text-total-orders": "Total Orders",
+	"text-total-products": "Total Products",
+	"text-upload-highlight": "Upload an image",
+	"text-upload-message": "or drag and drop",
+	"text-view": "View",
+	"text-visit-shop": "Visit Shop",
+	"text-withdrawal-info": "Withdrawal Information",
+	"token-required": "You must need to provide your token address",
+	"type-required": "Type is required",
+	"update-success": "Successfully updated!",
+	"user-avatar": "user avatar",
+	"variation-options-imported-successfully": "Variation Options Imported Successfully"
 }
