--- a/apps/dashboard/public/locales/en/table.json
+++ b/apps/dashboard/public/locales/en/table.json
@@ -1,50 +1,50 @@
 {
-  "recent-order-table-title": "Recent Orders",
-  "popular-products-table-title": "Popular Products",
-  "empty-table-data": "No data found",
-  "table-item-id": "ID",
-  "table-item-image": "Image",
-  "table-item-logo": "Logo",
-  "table-item-title": "Name",
-  "table-item-products": "Products",
-  "table-item-type": "Type",
-  "table-item-unit": "Price/Unit",
-  "table-item-quantity": "Quantity",
-  "table-item-description": "Description",
-  "table-item-status": "Status",
-  "table-item-actions": "Actions",
-  "table-item-tracking-number": "Tracking Number",
-  "table-item-total": "Total",
-  "table-item-order-date": "Order Date",
-  "table-item-icon": "Icon",
-  "table-item-slug": "Slug",
-  "table-item-details": "Details",
-  "table-item-delivery-fee": "Delivery Fee",
-  "table-item-shipping-address": "Shipping Address",
-  "table-item-serial": "Serial",
-  "table-item-email": "Email",
-  "table-item-avatar": "Avatar",
-  "table-item-banner": "Banner",
-  "table-item-code": "Code",
-  "table-item-amount": "Amount",
-  "table-item-active": "Active",
-  "table-item-expired": "Expired",
-  "table-item-rate": "Rate",
-  "table-item-country": "Country",
-  "table-item-city": "City",
-  "table-item-state": "State",
-  "table-item-zip": "ZIP",
-  "table-item-global": "Global",
-  "table-item-values": "Values",
-  "table-item-group": "Group",
-  "table-item-shop-id": "Shop ID",
-  "table-item-shop-name": "Shop Name",
-  "table-item-payment-method": "Payment Method",
-  "table-item-note": "Note",
-  "table-item-owner-name": "Owner Name",
-  "table-item-total-products": "Products",
-  "table-item-total-orders": "Orders",
-  "table-item-shop": "Shop",
-  "withdraw-table-title": "Recent Withdraws",
-  "table-item-created-at": "Created"
+	"empty-table-data": "No data found",
+	"popular-products-table-title": "Popular Products",
+	"recent-order-table-title": "Recent Orders",
+	"table-item-actions": "Actions",
+	"table-item-active": "Active",
+	"table-item-amount": "Amount",
+	"table-item-avatar": "Avatar",
+	"table-item-banner": "Banner",
+	"table-item-city": "City",
+	"table-item-code": "Code",
+	"table-item-country": "Country",
+	"table-item-created-at": "Created",
+	"table-item-delivery-fee": "Delivery Fee",
+	"table-item-description": "Description",
+	"table-item-details": "Details",
+	"table-item-email": "Email",
+	"table-item-expired": "Expired",
+	"table-item-global": "Global",
+	"table-item-group": "Group",
+	"table-item-icon": "Icon",
+	"table-item-id": "ID",
+	"table-item-image": "Image",
+	"table-item-logo": "Logo",
+	"table-item-note": "Note",
+	"table-item-order-date": "Order Date",
+	"table-item-owner-name": "Owner Name",
+	"table-item-payment-method": "Payment Method",
+	"table-item-products": "Products",
+	"table-item-quantity": "Quantity",
+	"table-item-rate": "Rate",
+	"table-item-serial": "Serial",
+	"table-item-shipping-address": "Shipping Address",
+	"table-item-shop": "Shop",
+	"table-item-shop-id": "Shop ID",
+	"table-item-shop-name": "Shop Name",
+	"table-item-slug": "Slug",
+	"table-item-state": "State",
+	"table-item-status": "Status",
+	"table-item-title": "Name",
+	"table-item-total": "Total",
+	"table-item-total-orders": "Orders",
+	"table-item-total-products": "Products",
+	"table-item-tracking-number": "Tracking Number",
+	"table-item-type": "Type",
+	"table-item-unit": "Price/Unit",
+	"table-item-values": "Values",
+	"table-item-zip": "ZIP",
+	"withdraw-table-title": "Recent Withdraws"
 }
