--- a/apps/dashboard/public/locales/mn/widgets.json
+++ b/apps/dashboard/public/locales/mn/widgets.json
@@ -1,10 +1,10 @@
 {
-  "sticker-card-title-rev": "Total Revenue",
-  "sticker-card-subtitle-rev": "(Last 30 Days)",
-  "sticker-card-title-order": "Total Order",
-  "sticker-card-subtitle-order": "(Last 30 Days)",
-  "sticker-card-title-customer": "New Customer",
-  "sticker-card-subtitle-customer": "(Last 30 Days)",
-  "sticker-card-title-today-rev": "Todays Revenue",
-  "sticker-card-title-total-shops": "Total Shops"
+	"sticker-card-subtitle-customer": "",
+	"sticker-card-subtitle-order": "",
+	"sticker-card-subtitle-rev": "Сүүлийн 30 өдөр",
+	"sticker-card-title-customer": "",
+	"sticker-card-title-order": "",
+	"sticker-card-title-rev": "",
+	"sticker-card-title-today-rev": "",
+	"sticker-card-title-total-shops": ""
 }
