--- a/apps/dashboard/public/locales/mn/common.json
+++ b/apps/dashboard/public/locales/mn/common.json
@@ -1,167 +1,167 @@
 {
-	"MARVEL_ERROR.ACTION_NOT_VALID": "",
-	"MARVEL_ERROR.INSUFFICIENT_BALANCE": "",
-	"MARVEL_ERROR.INVALID_CREDENTIALS": "",
-	"MARVEL_ERROR.NOT_AUTHORIZED": "",
-	"MARVEL_ERROR.NOT_FOUND": "",
-	"MARVEL_ERROR.OPERATION_NOT": "",
-	"MARVEL_ERROR.PAYMENT_FAILED": "",
-	"MARVEL_ERROR.PLEASE_LOGIN_USING_FACEBOOK_OR_GOOGLE": "",
-	"MARVEL_ERROR.SHOP_NOT_APPROVED": "",
-	"MARVEL_ERROR.SOMETHING_WENT_WRONG": "",
-	"MARVEL_ERROR.WITHDRAW_MUST_BE_ATTACHED_TO_SHOP": "",
-	"MARVEL_ERROR.WRONG_CSV": "",
-	"MARVEL_MESSAGE.CHECK_INBOX_FOR_PASSWORD_RESET_EMAIL": "",
-	"MARVEL_MESSAGE.EMAIL_SENT_SUCCESSFUL": "",
-	"MARVEL_MESSAGE.INVALID_CREDENTIALS": "",
-	"MARVEL_MESSAGE.INVALID_TOKEN": "",
-	"MARVEL_MESSAGE.NOT_FOUND": "",
-	"MARVEL_MESSAGE.PASSWORD_RESET_SUCCESSFUL": "",
-	"MARVEL_MESSAGE.SOMETHING_WENT_WRONG": "",
-	"MARVEL_MESSAGE.TOKEN_IS_VALID": "",
-	"active-from-date-required": "",
-	"admin-login-title": "",
-	"admin-register-title": "",
-	"amount-greater-than-zeo": "",
-	"amount-required": "",
-	"april": "",
-	"attribute": "",
-	"attribute-imported-successfully": "",
-	"attribute-values": "",
-	"august": "",
-	"auth-menu-checkout": "",
-	"auth-menu-logout": "",
-	"auth-menu-my-orders": "",
-	"auth-menu-profile": "",
-	"authorized-nav-item-logout": "",
-	"authorized-nav-item-profile": "",
-	"authorized-nav-item-settings": "",
-	"billing-address": "",
-	"block-customer": "",
-	"block-customer-confirm": "",
-	"button-block": "",
-	"button-cancel": "",
-	"button-delete": "",
-	"change-locale": "",
-	"code-required": "",
-	"color-required": "",
-	"confirm-password": "",
-	"currency-required": "",
-	"december": "",
-	"delete-item": "",
-	"delete-item-confirm": "",
-	"description": "",
-	"email-required": "",
-	"error-heading": "",
-	"expire-date-required": "",
-	"february": "",
-	"filter-by-category": "",
-	"filter-by-category-placeholder": "",
-	"filter-by-group": "",
-	"filter-by-group-placeholder": "",
-	"filter-by-order": "",
-	"filter-by-order-placeholder": "",
-	"invalid-email": "",
-	"invalid-token": "",
-	"january": "",
-	"join-button": "",
-	"july": "",
-	"june": "",
-	"march": "",
-	"may": "",
-	"name-required": "",
-	"nav-menu-contact": "",
-	"nav-menu-faq": "",
-	"nav-menu-offer": "",
-	"nav-menu-track-order": "",
-	"navbar-add-products": "",
-	"no-order-found": "",
-	"november": "",
-	"october": "",
-	"order-delivery-fee": "",
-	"order-discount": "",
-	"order-sub-total": "",
-	"order-tax": "",
-	"order-total": "",
-	"password-changed-successfully": "",
-	"password-required": "",
-	"password-should-match": "",
-	"pixel": "",
-	"product-imported-successfully": "",
-	"sale-history": "",
-	"september": "",
-	"serial-greater-than-zeo": "",
-	"serial-must-be-integer": "",
-	"serial-required": "",
-	"shipping-address": "",
-	"sidebar-nav-item-attribute-value": "",
-	"sidebar-nav-item-attributes": "",
-	"sidebar-nav-item-categories": "",
-	"sidebar-nav-item-coupons": "",
-	"sidebar-nav-item-dashboard": "",
-	"sidebar-nav-item-groups": "",
-	"sidebar-nav-item-my-shops": "",
-	"sidebar-nav-item-my-shops-dashboard": "",
-	"sidebar-nav-item-order-status": "",
-	"sidebar-nav-item-orders": "",
-	"sidebar-nav-item-products": "",
-	"sidebar-nav-item-settings": "",
-	"sidebar-nav-item-shippings": "",
-	"sidebar-nav-item-shops": "",
-	"sidebar-nav-item-staffs": "",
-	"sidebar-nav-item-tags": "",
-	"sidebar-nav-item-taxes": "",
-	"sidebar-nav-item-users": "",
-	"sidebar-nav-item-withdraws": "",
-	"signing-out-text": "",
-	"status-required": "",
-	"successfully-created": "",
-	"successfully-updated": "",
-	"tax-greater-than-zeo": "",
-	"tax-must-be-integer": "",
-	"tax-required": "",
-	"text-access-denied": "",
-	"text-access-denied-message": "",
-	"text-account-no": "",
-	"text-activate-user": "",
-	"text-active": "",
-	"text-add-your": "",
-	"text-amount": "",
-	"text-approve-shop": "",
-	"text-approved": "",
-	"text-ban-user": "",
-	"text-bank": "",
-	"text-banner": "",
-	"text-commission-rate": "",
-	"text-create-shop": "",
-	"text-current-balance": "",
-	"text-delete": "",
-	"text-details": "",
-	"text-disabled": "",
-	"text-disapprove-shop": "",
-	"text-download": "",
-	"text-edit": "",
-	"text-edit-shop": "",
-	"text-email": "",
-	"text-enabled": "",
-	"text-export-attributes": "",
-	"text-export-import": "",
-	"text-export-product-variations": "",
-	"text-export-products": "",
-	"text-filter": "",
-	"text-gross-sales": "",
-	"text-image": "",
-	"text-img-format": "",
-	"text-import-attributes": "",
+	"MARVEL_ERROR.ACTION_NOT_VALID": "Үйлдэл хүчингүй",
+	"MARVEL_ERROR.INSUFFICIENT_BALANCE": "Үлдэгдэл хангалтгүй",
+	"MARVEL_ERROR.INVALID_CREDENTIALS": "Хүчингүй итгэмжлэл",
+	"MARVEL_ERROR.NOT_AUTHORIZED": "Зөвшөөрөлгүй",
+	"MARVEL_ERROR.NOT_FOUND": "Олдсонгүй",
+	"MARVEL_ERROR.OPERATION_NOT": "Үйл ажиллагаа Үгүй",
+	"MARVEL_ERROR.PAYMENT_FAILED": "Төлбөр амжилтгүй боллоо",
+	"MARVEL_ERROR.PLEASE_LOGIN_USING_FACEBOOK_OR_GOOGLE": "Facebook эсвэл Google ашиглан нэвтэрнэ үү",
+	"MARVEL_ERROR.SHOP_NOT_APPROVED": "Дэлгүүр зөвшөөрөгдөөгүй",
+	"MARVEL_ERROR.SOMETHING_WENT_WRONG": "Ямар нэгэн зүйл буруугаар эргэсэн",
+	"MARVEL_ERROR.WITHDRAW_MUST_BE_ATTACHED_TO_SHOP": "Татан авалтыг дэлгүүрт хавсаргасан байх ёстой",
+	"MARVEL_ERROR.WRONG_CSV": "Та буруу csv файл байршуулсан байна!",
+	"MARVEL_MESSAGE.CHECK_INBOX_FOR_PASSWORD_RESET_EMAIL": "Нууц үг шинэчлэх имэйлийг ирсэн имэйлээс шалгана уу",
+	"MARVEL_MESSAGE.EMAIL_SENT_SUCCESSFUL": "Имэйлийг амжилттай илгээсэн",
+	"MARVEL_MESSAGE.INVALID_CREDENTIALS": "Өгөгдсөн итгэмжлэл хүчингүй байна",
+	"MARVEL_MESSAGE.INVALID_TOKEN": "Токен хүчингүй байна",
+	"MARVEL_MESSAGE.NOT_FOUND": "Олдсонгүй",
+	"MARVEL_MESSAGE.PASSWORD_RESET_SUCCESSFUL": "Нууц үг шинэчлэх амжилттай",
+	"MARVEL_MESSAGE.SOMETHING_WENT_WRONG": "Ямар нэгэн зүйл буруугаар эргэсэн",
+	"MARVEL_MESSAGE.TOKEN_IS_VALID": "Токен хүчинтэй",
+	"active-from-date-required": "огнооноос эхлэн идэвхтэй байх шаардлагатай",
+	"admin-login-title": "Админ руу нэвтэрнэ үү",
+	"admin-register-title": "Шинэ данс бүртгүүлэх",
+	"amount-greater-than-zeo": "Дүн нь тэгээс их байх ёстой",
+	"amount-required": "Хэмжээ шаардлагатай",
+	"april": "Дөрөвдүгээр сар",
+	"attribute": "Атрибут",
+	"attribute-imported-successfully": "Атрибутуудыг амжилттай импортолсон",
+	"attribute-values": "Атрибутын утгууд",
+	"august": "Наймдугаар сар",
+	"auth-menu-checkout": "Тооцоо хийх",
+	"auth-menu-logout": "Гарах",
+	"auth-menu-my-orders": "Миний захиалга",
+	"auth-menu-profile": "Холбоо барих",
+	"authorized-nav-item-logout": "Гарах",
+	"authorized-nav-item-profile": "Профайл",
+	"authorized-nav-item-settings": "Тохиргоо",
+	"billing-address": "Тооцооны хаяг",
+	"block-customer": "Хэрэглэгчийг блоклох",
+	"block-customer-confirm": "Та энэ үйлчлүүлэгчийг хаахдаа итгэлтэй байна уу?",
+	"button-block": "Блоклох",
+	"button-cancel": "Цуцлах",
+	"button-delete": "Устгах",
+	"change-locale": "Герман хэл рүү шилжих",
+	"code-required": "Код шаардлагатай",
+	"color-required": "Өнгө шаардлагатай",
+	"confirm-password": "Нууц үгээ баталгаажуулна уу!",
+	"currency-required": "Валют сонгоно уу",
+	"december": "Арванхоёрдугаар сар",
+	"delete-item": "Зүйлийг устгах",
+	"delete-item-confirm": "Та устгахдаа итгэлтэй байна уу?",
+	"description": "Захиалга хянах",
+	"email-required": "Та имэйл хаягаа оруулах шаардлагатай",
+	"error-heading": "Алдааны код: 404",
+	"expire-date-required": "Хугацаа дуусах хугацаа шаардлагатай",
+	"february": "Хоёрдугаар сар",
+	"filter-by-category": "Ангилалаар шүүх",
+	"filter-by-category-placeholder": "Ангилалаар шүүх",
+	"filter-by-group": "Бүлгээр шүүх",
+	"filter-by-group-placeholder": "Бүлгээр шүүх",
+	"filter-by-order": "Захиалга",
+	"filter-by-order-placeholder": "Захиалга",
+	"invalid-email": "Өгөгдсөн имэйл хаягийн формат буруу байна",
+	"invalid-token": "Буруу Token!",
+	"january": "Нэгдүгээр сар",
+	"join-button": "Нэгдэх",
+	"july": "долдугаар сар",
+	"june": "Зургадугаар сар",
+	"march": "Гуравдугаар сар",
+	"may": "Тавдугаар сар",
+	"name-required": "Та нэр өгөх ёстой",
+	"nav-menu-contact": "Холбоо барих",
+	"nav-menu-faq": "Түгээмэл асуултууд",
+	"nav-menu-offer": "Санал болгож байна",
+	"nav-menu-track-order": "Захиалга хянах",
+	"navbar-add-products": "Бүтээгдэхүүн нэмэх",
+	"no-order-found": "Захиалга олдсонгүй",
+	"november": "Арваннэгдүгээр сар",
+	"october": "Аравдугаар сар",
+	"order-delivery-fee": "Хүргэлтийн хураамж",
+	"order-discount": "Хямдралтай",
+	"order-sub-total": "Дэд нийлбэр",
+	"order-tax": "Татвар",
+	"order-total": "нийт",
+	"password-changed-successfully": "Нууц үгээ амжилттай өөрчиллөө!",
+	"password-required": "Та нууц үгээ оруулах шаардлагатай",
+	"password-should-match": "Нууц үг таарах ёстой!",
+	"pixel": "Пиксел",
+	"product-imported-successfully": "Бүтээгдэхүүнийг амжилттай импортолсон",
+	"sale-history": "Борлуулалтын түүх",
+	"september": "есдүгээр сар",
+	"serial-greater-than-zeo": "Цуваа нь тэгээс их байх ёстой",
+	"serial-must-be-integer": "Цуваа бүхэл тоо байх ёстой",
+	"serial-required": "Цуврал шаардлагатай",
+	"shipping-address": "Хүргэлтийн хаяг",
+	"sidebar-nav-item-attribute-value": "Атрибутын утгууд",
+	"sidebar-nav-item-attributes": "Атрибутууд",
+	"sidebar-nav-item-categories": "Ангилалууд",
+	"sidebar-nav-item-coupons": "Купон",
+	"sidebar-nav-item-dashboard": "Хяналтын самбар",
+	"sidebar-nav-item-groups": "Бүлгүүд",
+	"sidebar-nav-item-my-shops": "Миний дэлгүүрүүд",
+	"sidebar-nav-item-my-shops-dashboard": "Дэлгүүрийн хяналтын самбар",
+	"sidebar-nav-item-order-status": "Захиалгын байдал",
+	"sidebar-nav-item-orders": "Захиалга",
+	"sidebar-nav-item-products": "Бүтээгдэхүүн",
+	"sidebar-nav-item-settings": "Тохиргоо",
+	"sidebar-nav-item-shippings": "Хүргэлт",
+	"sidebar-nav-item-shops": "Дэлгүүрүүд",
+	"sidebar-nav-item-staffs": "Ажилтнууд",
+	"sidebar-nav-item-tags": "Шошго",
+	"sidebar-nav-item-taxes": "Татвар",
+	"sidebar-nav-item-users": "Хэрэглэгчид",
+	"sidebar-nav-item-withdraws": "Татаж авдаг",
+	"signing-out-text": "Гарч байна...",
+	"status-required": "Статус шаардлагатай",
+	"successfully-created": "Амжилттай үүсгэлээ!",
+	"successfully-updated": "Амжилттай шинэчлэгдсэн!",
+	"tax-greater-than-zeo": "Татвар нь тэгээс их байх ёстой",
+	"tax-must-be-integer": "Татвар нь бүхэл тоо байх ёстой",
+	"tax-required": "Татварын хувь хэмжээ шаардлагатай",
+	"text-access-denied": "Нэвтрэлт цуцлагдлаа",
+	"text-access-denied-message": "Танд энэ хуудсанд хандах эрх байхгүй.",
+	"text-account-no": "Дансны дугаар.",
+	"text-activate-user": "Хэрэглэгчийг идэвхжүүлэх",
+	"text-active": "Идэвхтэй",
+	"text-add-your": "Өөрийгөө нэмнэ үү",
+	"text-amount": "Хэмжээ",
+	"text-approve-shop": "Дэлгүүрийг зөвшөөрөх",
+	"text-approved": "Зөвшөөрсөн",
+	"text-ban-user": "Хэрэглэгчийг хориглох",
+	"text-bank": "Банк",
+	"text-banner": "Баннер",
+	"text-commission-rate": "Админ комиссын хувь",
+	"text-create-shop": "Дэлгүүр үүсгэх",
+	"text-current-balance": "Одоогийн үлдэгдэл",
+	"text-delete": "Устгах",
+	"text-details": "Дэлгэрэнгүй мэдээлэл",
+	"text-disabled": "Тахир дутуу",
+	"text-disapprove-shop": "Дэлгүүрийг зөвшөөрөхгүй",
+	"text-download": "Татаж авах",
+	"text-edit": "Засах",
+	"text-edit-shop": "Дэлгүүр засах",
+	"text-email": "И-мэйл",
+	"text-enabled": "Идэвхжүүлсэн байна",
+	"text-export-attributes": "Экспортын шинж чанарууд",
+	"text-export-import": "Экспорт/Импорт",
+	"text-export-product-variations": "Экспортын бүтээгдэхүүний өөрчлөлт",
+	"text-export-products": "Экспортын бүтээгдэхүүн",
+	"text-filter": "Шүүлтүүр",
+	"text-gross-sales": "Нйит борлуулалт",
+	"text-image": "Зураг",
+	"text-img-format": "PNG, JPG",
+	"text-import-attributes": "Импортын шинж чанарууд",
 	"text-import-product-variations": "",
-	"text-import-products": "",
-	"text-inactive": "",
-	"text-items-sold": "",
+	"text-import-products": "Импортын бүтээгдэхүүн",
+	"text-inactive": "Идэвхгүй",
+	"text-items-sold": "Худалдсан зүйлс",
 	"text-less": "",
 	"text-loading": "",
 	"text-logo": "",
 	"text-map-cant-load": "",
-	"text-name": "",
+	"text-name": "Нэр",
 	"text-no-address": "",
 	"text-no-contact": "",
 	"text-no-shop": "",
@@ -174,7 +174,7 @@
 	"text-pending": "",
 	"text-permission-message": "",
 	"text-processing": "",
-	"text-products": "",
+	"text-products": "Бүтээгдэхүүн",
 	"text-px": "",
 	"text-read-more": "Цааш унших",
 	"text-registered-since": "",
